# BattleGrid

./: .gitignore  AGENTS.md  Cargo.toml  DOC-RECONCILIATION.md  Dockerfile  Makefile  README.md  docker-compose.yml  setup.sh
.cargo/: config.toml
.codex/: codex-os.manifest.json  config.toml  verify.commands
.codex/bootstrap/: tests-docs.v1.json
.codex/local-environments/: setup.sh
.codex/schemas/: implementation-status.schema.json
.codex/scripts/: run_verify_commands.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  git-hygiene.yml  lockfile-rationale.yml  perf-enforced.yml  perf-foundation.yml  quality-gates.yml
.perf-baselines/: build-time.json  bundle.json
client/: package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
client/e2e/: smoke.spec.ts
client/src/: App.tsx
client/src/__tests__/: AnimationEngine.test.ts  App.test.tsx  Camera.test.ts  GameOverScreen.test.tsx  GameScreen.test.tsx  LobbyScreen.test.tsx  WaitingRoom.test.tsx  codec.test.ts  connectionStore.test.ts  eventAnimator.test.ts  gameStore.test.ts  hexMath.test.ts  lobbyStore.test.ts  logStore.test.ts  setup.ts  uiStore.test.ts  useWasmGame.test.ts
client/src/components/: Button.tsx  HelpOverlay.tsx  PlayerBadge.tsx  Timer.tsx  (+1 more)
codex/: CHANGELOG_DRAFT.md  CHECKPOINTS.md  DECISIONS.md  PLAN.md  SESSION_LOG.md  VERIFICATION.md
crates/battleground-core/: Cargo.toml
crates/battleground-server/: Cargo.toml
crates/battleground-server/src/: config.rs  error.rs  game.rs  lobby.rs  main.rs  protocol.rs  reconnect.rs  room.rs  state.rs  timer.rs  ws.rs
crates/battleground-wasm/: Cargo.toml
crates/battleground-wasm/src/: lib.rs
docs/: PORTFOLIO-DISPOSITION.md  dependency-updates.md
scripts/: build-wasm-safe.sh  cargo-safe.sh  clean-heavy.sh  clean-local.sh  client-safe.sh  dev-lean.sh  dev.sh  pnpm-safe.sh  smoke-docker.sh
scripts/ci/: require-tests-and-docs.mjs
scripts/perf/: bundle-report.mjs  check-assets.sh  measure-build-time.mjs
(+56 files in other folders)
