[package]
name = "battleground-server"
version = "0.1.0"
edition = "2021"

[dependencies]
battleground-core = { path = "../battleground-core" }
axum = { version = "=0.8.8", features = ["ws"] }
tokio = { version = "=1.50.0", features = ["full"] }
tower-http = { version = "=0.6.8", features = ["cors", "fs"] }
serde = { workspace = true }
serde_json = "=1.0.149"
bincode = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "=1.23.0", features = ["v4"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
thiserror = { workspace = true }
futures-util = "0.3"
dashmap = "=6.1.0"
rand = { workspace = true }

[dev-dependencies]
tokio-tungstenite = "0.26"
