[package]
name = "battleground-server"
version = "0.1.0"
edition = "2021"

[dependencies]
battleground-core = { path = "../battleground-core" }
axum = { version = "=0.8.4", features = ["ws"] }
tokio = { version = "=1.45.1", features = ["full"] }
tower-http = { version = "=0.6.6", features = ["cors", "fs"] }
serde = { workspace = true }
serde_json = "=1.0.149"
bincode = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "=1.20.0", features = ["v4"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }
thiserror = { workspace = true }
futures-util = "0.3"
dashmap = "=6.1.0"
rand = { workspace = true }

[dev-dependencies]
tokio-tungstenite = "0.26"
