[package]
name = "battleground-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
battleground-core = { path = "../battleground-core" }
wasm-bindgen = "=0.2.100"
serde-wasm-bindgen = "=0.6.5"
js-sys = "=0.3.77"
serde = { workspace = true }
bincode = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
